Fixed footer contrast

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ em {
 	line-height: 18px;
 	padding-top: 10px;
 	display: block;
-	color: #999;
+	color: #757575;
 }
 
 /* ------ =contact ----- */
@@ -229,7 +229,7 @@ hr {
 
 footer {
     width: 100%;
-    background-color: #8b959f;
+    background-color: #6D7783;
 }
   
 footer a {
